# acesiii-3_V10

./: .gitignore  GENBAS  GNUmakefile.chssi  INSTALL  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure_line.beluga  configure_line.bluewaters  configure_line.centennial  configure_line.cray  configure_line.dataplex  configure_line.excalibur  configure_line.sgi  configure_line.topaz  configure_line.ufhpc
doc/: Doxyfile
src/: Makefile  t.diff
src/aces/: Makefile
src/aces/aces_library/: Makefile
src/aces/aces_library/a2driver/: Makefile
src/aces/aces_library/special_directory/: Makefile
src/aces/aces_sial/: Makefile  Makefile.in  default_jobflows  sial_config  t
src/aces/aces_sial/ccsd/: ccsd_rhf_ao_sv1_diis5.sial  ccsd_uhf_ao_sv2_diis5.sial  ccsd_uhf_dropmo.sial  eccsd_rhf.sial  eccsd_uhf.sial  qcisd_rhf.sial  qcisd_uhf.sial  qcisdpt_aaa.sial  qcisdpt_aab.sial  rccsd_rhf.sial  rccsd_uhf.sial  uqcisdpt_aaa.sial  uqcisdpt_aab.sial  uqcisdpt_bba.sial  uqcisdpt_bbb.sial
src/aces/aces_sial/ccsdpt/: lccsdpt_aaa_psect.sial  lccsdpt_aab_psect.sial  rccsdpt_aaa.sial  rccsdpt_aab.sial  urccsdpt_aaa.sial  urccsdpt_aab.sial  urccsdpt_bba.sial  urccsdpt_bbb.sial
src/aces/aces_sial/ccsdptgrad/: lambdaT_uhf_ao_sv1.sial  one_test.sial  temp.sial  temp_ref.sial  temp_ref_opt.sial  temp_sub.sial  temp_sub.sial.back  temp_sub.sial.feb21  temp_sub.sial.feb25  temp_sub.sial.feb28  temp_sub.sial.feb28.2  temp_sub.sial.march3  temp_sub.sial.march8  temp_sub_ssS.sial.wip  two_test.sial  utgrad_aaa.sial  utgrad_aaa.sial.april10  utgrad_aaa.sial.back
src/aces/aces_sial/cis/: cis-2.sial  cis_d_rhf.sial  cis_mp2_rhf.sial  cis_rhf.sial  cis_rhf_dens.sial  cis_uhf.sial  cis_uhf_dens.sial
src/aces/aces_sial/dea/: ccsd_uhf_dea.sial  eom_dea_left_singlets.sial  eom_dea_left_triplets.sial  eom_dea_singlets.sial  eom_dea_triplets.sial  hbar_uhf_dea.sial  tran_uhf_dea.sial
src/aces/aces_sial/dip/: eom_dip_left_singlets.sial  eom_dip_left_triplets.sial  eom_dip_singlets.sial  eom_dip_triplets.sial
src/aces/aces_sial/eom/: bak_truncated_eom.sial  elccsd_uhf.sial  eomccsd_density_rhf.sial  eomccsd_density_uhf.sial  eomccsd_uhf_ao.sial  (+19 more)
src/main/: Makefile  Makefile.in  beta.F  det_segsizes.F  find_jobflow.F  find_seg.F  handle_gradient.F  handle_hessian.F  init_data.F  int_gen_init.F  int_send_common.F  molread.F  scf_init.F  timer_data.F  write_default_sial_programs.F  write_zmat_auto.F
src/sia/: Makefile
src/sia/framelib/: Makefile  Makefile.in  clear_saved_requests.F  enter_request.F  timer.F
src/sia/include/: F12.h  F12_1el_type.h  F12_gr.h  aces3_version.h  blkmgr.h  daveom.h  eominit.h  frag_def.h  int_gen_parms.h  interpreter.h  pst.h  restrict_pardo.h  timerz.h
src/sia/manager/: Makefile  Makefile.in  print_server_data.F  server_struct.h  sip_server_init.F  sip_server_work.F
src/sia/sip_shared/: Makefile  Makefile.in  init_machine_types.F  load_pre_defined_routines_compile_time.F  mem_alloc.c  sial_interface.F
src/sia/worker/: Makefile  Makefile.in  build_segment_table.F  determine_stack_blocksizes.F  fragment_orbitals.F  fshells_to_segments.F  init_c.F  init_fockrohf.F  print_symbolic_constants.F  sip_fmain.F  stack_distribution.F  vtdemo_init.F  write_eig_data.F
src/sial_compiler/: Makefile
src/sial_compiler/compiler/: Makefile  Makefile.in
src/sial_compiler/sial/: Makefile  Makefile.in
test_compare/: Makefile.in
tests/: zmat_1.1.1.1  zmat_1.1.2.1  zmat_1.1.2.2  zmat_1.1.3.1  zmat_1.1.3.2  zmat_1.1.4.1  zmat_1.1.4.2  zmat_1.2.1.1  zmat_1.2.2.1  zmat_1.2.3.1  zmat_1.2.3.2  zmat_1.3.1.1  zmat_1.3.2.1  zmat_1.4.3.1  zmat_1.4.3.2  zmat_2.1.1.1  zmat_2.1.2.1  zmat_2.1.2.2  zmat_2.1.3.1  zmat_2.1.3.2  zmat_2.1.4.1  zmat_2.1.4.2  zmat_2.2.1.1  zmat_2.2.2.1  zmat_2.2.3.1  zmat_2.2.3.2  zmat_2.3.1.1  zmat_2.3.2.1  zmat_2.4.3.1  zmat_2.4.3.2  zmat_2.4.3.3  zmat_3.1.1.1  zmat_3.1.2.1  zmat_3.1.3.1  zmat_3.1.3.2  zmat_3.1.4.1  zmat_3.1.4.2  zmat_3.2.1.1  zmat_3.2.1.2  zmat_3.2.2.1  (+14 more)
(+1532 files in other folders)
